# impacted

./: MODULE.aspect  README.md  bazel-diff.axl  runnable.axl
.github/workflows/: ci.yaml
example/: MODULE.aspect  MODULE.bazel  README.md
example/tools/: BUILD
